--- a/assets/loading.css
+++ b/assets/loading.css
@@ -239,7 +239,7 @@
     color: #00cec9;
     animation: blink 1s infinite;
     margin-left: 2px;
-    margin-top: 4px;
+    margin-top: 0;
 }
 
 @media (max-width: 768px),
@@ -411,4 +411,17 @@
 
 .welcome-text.visible {
     opacity: 1;
+}
+
+@keyframes blink {
+
+    0%,
+    49% {
+        opacity: 1;
+    }
+
+    50%,
+    100% {
+        opacity: 0;
+    }
 }
