--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -684,7 +684,7 @@ footer {
     }
 }
 
-.close {
+#image-viewer .close {
     position: absolute;
     top: 20px;
     right: 35px;
@@ -695,8 +695,8 @@ footer {
     cursor: pointer;
 }
 
-.close:hover,
-.close:focus {
+#image-viewer .close:hover,
+#image-viewer .close:focus {
     color: var(--accent-color);
     text-decoration: none;
     cursor: pointer;
